Internet Test and Pooja code

--- a/kayakIntegratedProject/testData/credentials.properties
+++ b/kayakIntegratedProject/testData/credentials.properties
@@ -19,9 +19,9 @@ namefb2=test
 passfb2=pass
 
 noofvescripts=2
-nameve1:test101@abc.com
+nameve1:MLK@abc.com
 passve1:kayak2016
 emailve1:no
-nameve2:test201@abc.com
+nameve2:MLL@abc.com
 passve2:kayak2016
 emailve2:no
